[project]
name = "fine-tunning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchaudio",
    "torchvision",
    "transformers[torch]>=4.50.0",
]
